# torpor-public

./: .gitignore  OVERVIEW.md  QUICKSTART.md  README.md  TODO.md
poc/: Cargo.toml  README.md  RUNBOOK.md  p10_s3_report.json
poc/.cargo/: config.toml
poc/agent-sdk/: Cargo.toml
poc/agent-sdk/examples/: approval_agent.rs  brainstorm_synth.rs  code_reviewer.rs  critic_agent.rs  data_accessor.rs  density_worker.rs  echo.rs  hierarchy_synth.rs  incident_aggregator.rs  llm_supervisor.rs  llm_worker.rs  monitor_agent.rs  multi_turn.rs  orchestrator.rs  quality_writer.rs  rollback_target.rs  severity_judge.rs  supervisor_arith.rs  support_triage.rs  tally_secretary.rs  task_step.rs  voter_agent.rs  worker_double_check.rs  worker_prime.rs
poc/agent-sdk/src/: lib.rs
poc/benchmarks/: Cargo.toml
poc/benchmarks/src/: main.rs
poc/capabilities/: Cargo.toml
poc/capabilities/benches/: revoke_latency.rs
poc/capabilities/src/: lib.rs
poc/causal-log/: Cargo.toml
poc/causal-log/benches/: causal_end_to_end.rs  causal_lookup.rs
poc/causal-log/src/: error.rs  lib.rs
poc/reconstruct/: Cargo.toml
poc/reconstruct/src/: main.rs
poc/redb-fork/: Cargo.toml  README.md  patch_nostd.py
poc/redb-fork/src/: backends.rs  compat.rs  complex_types.rs  db.rs  error.rs  lib.rs  multimap_table.rs  sealed.rs  table.rs  transaction_tracker.rs  transactions.rs  tuple_types.rs  types.rs
poc/redb-fork/src/tree_store/: btree.rs  btree_base.rs  btree_iters.rs  btree_mutator.rs  mod.rs  table_tree.rs  table_tree_base.rs
poc/redb-fork/src/types/: chrono_v0_4.rs  uuid.rs
poc/redb-p3a/: Cargo.toml
poc/redb-p3a/results/redb-p3a/: verdict.json
poc/redb-p3a/src/: main.rs
poc/runtime/: Cargo.toml
poc/runtime/benches/: commit_barrier.rs
poc/runtime/src/: actor.rs  clock.rs  crash_point.rs  durability.rs  error.rs  integrity.rs  io_queue.rs  lib.rs  scheduler.rs  watchdog.rs
poc/runtime/src/fleet/: mod.rs  tests.rs
poc/runtime/src/inference/: mod.rs  queue.rs
poc/scenarios/: README.md  run-all.sh
poc/scenarios/ICSR-drop-caches/: VERDICT.md  run.sh
poc/scenarios/P10-S3/: VERDICT.md  report.json
poc/scenarios/P10-S5/: VERDICT.md  report.json
poc/scenarios/S1-supervision-algorithmique/: README.md  reference_responses.jsonl
poc/scenarios/S10-unified-scheduler/: README.md  report.json  run.sh
poc/scenarios/S11-evict-wake/: README.md  report.json  run.sh
poc/scenarios/S12-scheduler-coordinator/: README.md  report.json  run.sh
poc/scenarios/S13-persistence-restart/: README.md  report.json  run.sh
poc/scenarios/S14-causal-lookup/: README.md  report.json  run.sh
poc/scenarios/S15-crash-machine-concurrent/: README.md  run.sh
poc/scenarios/S16-infer-cancel-toctou/: README.md  VERDICT.md
poc/scenarios/S17-rollback-cap-cascade/: README.md  VERDICT.md
poc/scenarios/S18-add-cause-merge/: README.md
poc/scenarios/S19-compensation-orphelin/: README.md  VERDICT.md
poc/scenarios/S2-self-rollback-incoherence/: README.md  reference_responses.jsonl
poc/scenarios/S20-propagation-crash-agent/: README.md
poc/scenarios/S21-cap-delegation-scope-prefix/: README.md
poc/scenarios/S22-session-bounded/: README.md
poc/scenarios/S23-validation-timeout/: README.md
poc/scenarios/S24-watchdog-budget/: README.md
poc/scenarios/S25-restart-policy-one-for-one/: README.md
poc/scenarios/S26-introspection-a1/: README.md
poc/scenarios/S27-emit-contract/: README.md
poc/scenarios/S28-self-rollback-post-emit/: README.md  VERDICT.md
poc/scenarios/S29-revoke-recursive-deep/: README.md
poc/scenarios/S3-inference-cap/: README.md
poc/scenarios/S30-wasm-adversarial-trap/: README.md
poc/scenarios/S31-audit-flood-beyond-32/: README.md  VERDICT.md
poc/scenarios/S32-causal-forgery-b-light/: README.md  VERDICT.md
poc/scenarios/S33-anti-starvation-batch/: README.md
poc/scenarios/S34-determinism-two-instances/: README.md
poc/scenarios/S35-storm-p2-p4-p6/: README.md
poc/scenarios/S4-scheduler-rollback/: README.md
poc/scenarios/S5-fairness-priority/: README.md
poc/scenarios/S6-crash-atomicity/: README.md  run.sh
poc/scenarios/S7-rollback-equivalence/: README.md  report.json  run.sh
poc/scenarios/S8-determinism/: README.md  report.json  run.sh
poc/scenarios/S9-capability-isolation/: README.md  report.json  run.sh
poc/scenarios/SEF-10-cross-store-crash/: VERDICT.md
poc/scenarios/SEF-12-rollback-adversarial/: VERDICT.md
poc/scenarios/SEF-13-causality-adversarial/: VERDICT.md
poc/scenarios/SEF-8-soundness-gate/: VERDICT.md
poc/scenarios/SEF-9-confused-deputy-audit/: VERDICT.md
poc/scenarios/orphan-metric/: README.md  VERDICT.md  analyze.py
poc/sel4-hello/: demo-isolation.sh
poc/sel4-hello/c1-hello/: run-c1.sh
poc/sel4-hello/c10-crash/: Cargo.toml  Makefile  test.py
poc/sel4-hello/c10-crash/runtime/: Cargo.toml
poc/sel4-hello/c10-crash/server/: Cargo.toml
poc/sel4-hello/c10-crash/supervisor/: Cargo.toml
poc/sel4-hello/c10-wx/: Cargo.toml  Makefile  test.py
poc/sel4-hello/c10-wx/.cargo/: config.toml
poc/sel4-hello/c10-wx/runtime/: Cargo.toml
poc/sel4-hello/c11-prov/: Makefile  rust-toolchain.toml  test.py
poc/sel4-hello/c11-untrusted/: Makefile  test.py
poc/sel4-hello/c2-root-task/: Cargo.toml  Makefile  test.py
poc/sel4-hello/c3-wasmtime/: Cargo.toml  Makefile  build.rs  test.py
poc/sel4-hello/c4-virtio-blk/: Cargo.toml  Makefile  test.py
poc/sel4-hello/c5-redb-on-virtio/: Cargo.toml  Makefile  test.py
poc/sel4-hello/c6-crash/: Makefile  rust-toolchain.toml  test.py
poc/sel4-hello/c6-integration/: Makefile  test.py
poc/sel4-hello/c7-crash/: Makefile  test.py
poc/sel4-hello/c7-integration/: Makefile  test.py
poc/sel4-hello/c8-store/: Makefile  test.py
poc/sel4-hello/c9-reopen/: Cargo.toml  Makefile  rust-toolchain.toml  test.py
poc/sel4-hello/d-p3a/: Cargo.toml  Makefile  VERDICT.md  test.py
poc/sel4-hello/d-p3a/src/: mem.rs  (+1 more)
poc/sel4-hello/sel4-common/: Cargo.toml
poc/sel4-smoke/: Cargo.toml
poc/sel4-smoke/src/: main.rs
poc/store/: Cargo.toml
poc/store/benches/: rollback_latency.rs
poc/store/src/: error.rs  lib.rs
(+318 files in other folders)
