[workspace]
members = [
    "store",
    "causal-log",
    "runtime",
    "capabilities",
    "benchmarks",
    "reconstruct",
    "agent-sdk",
    "sel4-smoke",
]
resolver = "2"

[workspace.dependencies]
# Store content-addressed
rocksdb = "0.22"
# Allocateur jemalloc — retour pages OS après free(), évite la rétention glibc ptmalloc2
# qui fausse les mesures RSS post-compaction (ADR-0034 D1 / TODO P3A).
tikv-jemallocator = "0.6"
sha2 = "0.10"
hex = "0.4"

# Runtime / async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
wasmtime = "25"

# Sérialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rmp-serde = "1"
serde_bytes = "0.11"

# Logs / tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Tests / benchmarks
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[profile.bench]
opt-level = 3
debug = false
