[package]
name = "os-poc-causal-log"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rmp-serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = "1"

[features]
test-utils = []

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
rand = "0.8"

[[bench]]
name = "causal_lookup"
harness = false

[[bench]]
name = "causal_end_to_end"
harness = false
