[package]
name = "os-poc-store"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = "1"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "rollback_latency"
harness = false
