[package]
name = "os-poc-c11prov-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "os-poc-c11prov-server"
path = "src/main.rs"

[dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4", rev = "7a2321f2d84310ba7a09fe7f5988e6dcecde3566" }
sel4-dlmalloc = { git = "https://github.com/seL4/rust-sel4", rev = "7a2321f2d84310ba7a09fe7f5988e6dcecde3566" }
sel4-panicking = { git = "https://github.com/seL4/rust-sel4", rev = "7a2321f2d84310ba7a09fe7f5988e6dcecde3566", features = ["personality", "panic-handler", "alloc"] }
sel4-panicking-env = { git = "https://github.com/seL4/rust-sel4", rev = "7a2321f2d84310ba7a09fe7f5988e6dcecde3566" }
sel4-runtime-common = { git = "https://github.com/seL4/rust-sel4", rev = "7a2321f2d84310ba7a09fe7f5988e6dcecde3566", features = ["sel4"] }
sel4-virtio-hal-impl = { git = "https://github.com/seL4/rust-sel4", rev = "7a2321f2d84310ba7a09fe7f5988e6dcecde3566" }
virtio-drivers = "0.13.0"
spin = "0.9"
one-shot-mutex = "0.2.1"
cfg-if = "1.0"
redb = { path = "../../../redb-fork" }

[profile.release]
panic = "abort"
opt-level = "s"
